[package]
name = "rust-dl-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
ndarray-linalg = "0.13"
rayon = "1.5"
rand = "0.8.5"
rand_pcg = "0.3.0"

